--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://shritangunday.github.io/shritan-gunday.github.io/",
   "name": "personal-website",
   "version": "0.0.0",
   "scripts": {
